# ros-localization-with-marker

./: CMakeLists.txt  README.md  package.xml
ros-base-localization/: CMakeLists.txt  package.xml
ros-base-localization/launch/: localizator.launch
ros-base-localization/src/: localizator.cpp
ros-localization-tf/: CMakeLists.txt  package.xml
ros-localization-tf/launch/: localizator.launch  localizatorLAB.launch
ros-localization-tf/src/: localizator-with-tf.cpp
ros-marker-trajectory/: CMakeLists.txt  README.md  package.xml
ros-marker-trajectory/launch/: aio-trajectory-follower.launch  aio-trajectory-follower640.launch  trajectory-follower.launch
ros-marker-trajectory/src/: marker_localization_trajectory_follower.cpp  trajectory-follower.cpp
src/: localizator.cpp
